# smallprojects

./: LICENSE  README.md  brute_squaredle.py  chis.html  dancooked.html  dict_squaredle.py  galactica_test.py  scrapechris.py  test_search.py
NBA Fantasy/: DARKO_daily_projections_2024-06-30.csv  DARKO_daily_projections_2024-11-12.csv  DARKO_player_talent_2024-06-30.csv  DARKO_player_talent_2024-11-12.csv  cookie.txt  darko_conversion_2024.rmd  fantasy_scrape.Rmd
NBA Fantasy/2023/: DARKO_daily_projections_2023-11-02.csv  DARKO_daily_projections_2023-12-10.csv  DARKO_player_talent_2023-11-02.csv  DARKO_player_talent_2023-12-10.csv  ESPN_daily_projections.csv  darko_conversion.rmd
luca/: luca_code.py
sejal_analysis/: split_pdf.py  test.py
squaredle/: dict_squaredle.py  keyboard_inputs.py  main.py  make_squaredle_dict.py  mouse_mover.py  trie_squaredle.py  utils.py  words.txt
squaredle-solver/: README.md  pyproject.toml
